--- a/userChrome.css
+++ b/userChrome.css
@@ -24,3 +24,8 @@
 #userContext-icons[tooltiptext="Facebook"] {
 	display: none !important;
 }
+
+/* remove private browsing label */
+#private-browsing-indicator-with-label {
+	display: none !important;
+}
